force/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major Retail Outlet</fullName>
                </value>
                <value>
                    <fullName>General Shopping Area</fullName>
                </value>
                <value>
                    <fullName>Medical or Office Complex</fullName>
                </value>
                <value>
                    <fullName>Stand-Alone Building</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Medicaid_Number_1__c</fullName>
        <label>Location Medicaid Number 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Medicaid_Number_2__c</fullName>
        <label>Location Medicaid Number 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Medicaid_Number_3__c</fullName>
        <label>Location Medicaid Number 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Medicaid_State_1__c</fullName>
        <label>Location Medicaid State 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Medicaid_State_2__c</fullName>
        <label>Location Medicaid State 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Medicaid_State_3__c</fullName>
        <label>Location Medicaid State 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M - VSP Member Location</fullName>
                </value>
                <value>
                    <fullName>A - Affiliate Provider Location</fullName>
                </value>
                <value>
                    <fullName>F - Laser Vision Correction (LVC)</fullName>
                </value>
                <value>
                    <fullName>X - Client Authorized Location (GAP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDM_Account_Keys__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>MDM Account Key.</inlineHelpText>
        <label>MDM Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Combo_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to store MDM Account and Location Key that will be leveraged by integration logic to identify a unique account.</description>
        <externalId>true</externalId>
        <label>MDM Combo Key</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDM_Location_Keys__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>MDM Location Key.</inlineHelpText>
        <label>MDM Location Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Brands_Report_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VSPR30_Acc_Brand_History_LTM_Vfp?id=&quot; + Id, &quot;Brand History LTM&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marchon Brands Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Buying_Group__c</fullName>
        <label>Marchon Buying Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Close_Out__c</fullName>
        <label>Marchon - Close Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_DMs__c</fullName>
        <label>Marchon DMs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Dashboard__c</fullName>
        <formula>HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;PracticeReport_1&apos;]&amp;run.outputFormat=HTML&amp;run.prompt=false&amp;p_MasterAcctID=&quot;&amp;MDM_Account_Keys__c,&quot;Marchon&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marchon Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Frame_of_Vision_Care_Claims__c</fullName>
        <label>Marchon Frame Selection Rate LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marchon_Key_Account__c</fullName>
        <label>Marchon - Key Account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Key_s__c</fullName>
        <description>SAP Number / Native ID(s).</description>
        <inlineHelpText>SAP Number / Native ID(s).</inlineHelpText>
        <label>Marchon Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Last_Activity__c</fullName>
        <inlineHelpText>The date of the last activity a Business Development Rep completed on the account.</inlineHelpText>
        <label>Marchon Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marchon_Last_Stock_Date__c</fullName>
        <description>The last time the account placed a stock order (code ZSTK) regardless of brand.</description>
        <inlineHelpText>The last time the account placed a stock order (ZSTK or ZIND)</inlineHelpText>
        <label>Last Stock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marchon_Optical__c</fullName>
        <label>Marchon Prospect Rep</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_RVPs__c</fullName>
        <label>Marchon RVPs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Reps__c</fullName>
        <description>SAP Numbers of Marchon Reps assigned to this Account.</description>
        <label>Marchon Reps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marchon_Retail__c</fullName>
        <label>Marchon Retail</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_Revenue_YTD__c</fullName>
        <inlineHelpText>Revenue calculated from January through end of last month.</inlineHelpText>
        <label>Marchon Revenue YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon_SAP_Account_Number__c</fullName>
        <description>SAP Account Number for Marchon.</description>
        <label>Marchon SAP Acct #</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marchon_SAP_Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accounts on credit hold for Marchon have either a Frozen (S) or  Pre-Pay (PP) credit hold status in SAP.</description>
        <inlineHelpText>Account has either a Frozen (S) or  Pre-Pay (PP) credit hold status in SAP.</inlineHelpText>
        <label>SAP Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_Sales_Target__c</fullName>
        <label>Eyewear Sales Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Account Current Marchon Customer.</description>
        <inlineHelpText>Is Account Current Marchon Customer.</inlineHelpText>
        <label>Marchon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_and_Altair_Net_Sales_LTM__c</fullName>
        <description>Net sales for Marchon and Altair Net Sales.</description>
        <inlineHelpText>Net sales for Marchon and Altair Net Sales.</inlineHelpText>
        <label>Marchon and Altair Net Sales LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon_of_Eyefinity_Frame_Claims__c</fullName>
        <inlineHelpText>Percentage of total Eyefinity Lab Orders over last 12 months. Includes VSP, other payer, and private orders.</inlineHelpText>
        <label>Marchon % of Eyefinity Frame Lab Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marchons_Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator identifying whether or not the customer is a key account for Marchon.</description>
        <inlineHelpText>Identifies Key Accounts for Marchon</inlineHelpText>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchOfficePhone__c</fullName>
        <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchOfficePhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchStreetZIP__c</fullName>
        <formula>Trim(Left( ShippingStreet,Find(&quot; &quot;,ShippingStreet))) + ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchStreetZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_Eyewear_Target__c</fullName>
        <formula>If(RecordType.Name = &apos;Practice Account&apos;, 
			IF(Eyewear_Sales_Needed__c &lt;=0, true, false),
			IF(Parent.Eyewear_Sales_Needed__c &lt;=0, true, false)
)</formula>
        <label>Meets Eyewear Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_UNITY_Target__c</fullName>
        <formula>IF(RecordType.Name = &apos;Practice Account&apos;,
			IF(UNITY_Pairs_Needed__c  &lt;= 0, true, false),
			IF(Parent.UNITY_Pairs_Needed__c  &lt;= 0, true, false)
		)</formula>
        <label>Meets UNITY Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Pended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Business_Hours__c</fullName>
        <label>Monday Business Hours</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Close__c</fullName>
        <label>Monday Close</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Open__c</fullName>
        <label>Monday Open</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Sales_History__c</fullName>
        <formula>IF((ISPICKVAL(Contract_Type__c, &apos;Conflict&apos;) || ISPICKVAL(Contract_Type__c, &apos;Rollup&apos;)), &quot;Account is part of a Global Reward Group Relationship&quot;,
IF(NOT(ISBLANK(TEXT(Contract_Type__c))), 
			HYPERLINK(&quot;https://vspglobalanalytics.com/ibmcognos/bi/?pathRef=.public_folders%2FProvider%2BOperations%2Band%2BAnalytics%2FDashboards%2FPremier%2BTier%2BReport&amp;p_PracticeTaxID=&quot; &amp; Tax_ID__c, &quot;Monthly Sales History&quot;), 
			&quot;Monthly Sales History not available&quot;))</formula>
        <label>Monthly Sales History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_to_Check_In__c</fullName>
        <formula>CASE( Premier_Reporting_Month__c , 
&apos;January&apos;, 5, 
&apos;February&apos;, 4,
&apos;March&apos;, 3,
&apos;April&apos;, 2,
&apos;May&apos;, 1,
&apos;June&apos;, 6,
&apos;July&apos;, 5,
&apos;August&apos;, 4,
&apos;September&apos;, 3,
&apos;October&apos;, 2,
&apos;November&apos;, 1,
&apos;December&apos;, 6, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months to Check-In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Marketing_Team_Services__c</fullName>
        <label>My Marketing Team Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hootsuite</fullName>
                </value>
                <value>
                    <fullName>SolutionReach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPIType2StreetNumber__c</fullName>
        <formula>IF( ISBLANK(NPI_Type_2__c) ,

&apos;Null NPI Type 2&apos;,

NPI_Type_2__c + Trim(Left( ShippingStreet,Find(&quot; &quot;,ShippingStreet)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPIType2StreetNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Type_2__c</fullName>
        <description>NPI Type 2 indicator.</description>
        <inlineHelpText>National Provider Indicator for organizations such as facilities, hospitals, etc.</inlineHelpText>
        <label>NPI Type 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Release_Preference__c</fullName>
        <label>New Release Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Send</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Check Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Web_Address_Added__c</fullName>
        <label>New Web Address Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Sales Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Business_Account__c</fullName>
        <formula>IF(
AND(
Practice_Accounts__c  = &apos;Practice Account&apos;,
 RecordType.Name  = &apos;Business Account&apos;
),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Business Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_VC_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non VC Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Eligible_Locations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Eligible Locations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OON_Eligibility_Coverage__c</fullName>
        <inlineHelpText>Indicates if you can share the available member out-of-network benefit information at this location.  Do not share out-of-network benefit information if the value is &apos;N&apos;.</inlineHelpText>
        <label>OON Eligibility/Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfficeMate_Version__c</fullName>
        <inlineHelpText>Most recent installed OfficeMate version number.</inlineHelpText>
        <label>OfficeMate Version</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone_Zip__c</fullName>
        <formula>IF(ISBLANK(ShippingPostalCode), 
SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;) + &quot;NulLZIP&quot;, 
SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;) +  ShippingPostalCode)</formula>
        <label>Office Phone Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Appointment_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patients can request appt times through Find A Dr. See addresses in Phone, Email and Website section.</inlineHelpText>
        <label>Online Appointment Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ophthalmic_Business_Consultant__c</fullName>
        <label>Ophthalmic Business Consultant</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ophthalmic_Consultant_Last_Contacted__c</fullName>
        <inlineHelpText>When an Ophthalmic Business Consultant completes an activity, today’s date is populated</inlineHelpText>
        <label>Ophthalmic Consultant Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_of_Choice_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-Out of Choice Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optical_Department_Phone__c</fullName>
        <label>Optical Department Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Optics_Acutal_Sales_Indicator__c</fullName>
        <label>Optics Actual Sales Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optics_Contact_Lens_Consultant__c</fullName>
        <label>Optics Contact Lens Consultant</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Contact_Lens_Kits__c</fullName>
        <description>The Contact Lens Kit(s) that have been ordered for this Account.</description>
        <label>Optics Contact Lens Kits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FK UNITY BIOSYNC B SPH 8.8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optics_Customer_Profile_Report_Brand__c</fullName>
        <formula>IF(RecordTypeId = &apos;012d0000000StQR&apos;, 
HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;Account Call Sheet-Brand&apos;]&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;p_MasterAccountID=&quot;&amp;MDM_Account_Keys__c, &quot;Brand&quot;,&quot;_blank&quot;),
HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;Account Call Sheet-Brand&apos;]&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;p_MasterAccountID=&quot;&amp;MDM_Account_Keys__c &amp;&quot;&amp;p_LocationID=&quot;&amp; MDM_Location_Keys__c, &quot;Brand&quot;,&quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Profile Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Customer_Profile_Report__c</fullName>
        <formula>IF( RecordTypeId = &apos;012d0000000StQR&apos;,
HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;Account Call Sheet-Lab Sales&apos;]&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;p_MasterAcctID=&quot;&amp;MDM_Account_Keys__c, &quot;VSPOne&quot;,&quot;_blank&quot;),
HYPERLINK(&quot;http://www.vspcognos.com/cognos10.2/cgi-bin/cognos.cgi?b_action=cognosViewer&amp;ui.action=run&amp;ui.object=/content/folder[@name=&apos;-Salesforce&apos;]/report[@name=&apos;Account Call Sheet-Lab Sales&apos;]&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;p_MasterAcctID=&quot;&amp;MDM_Account_Keys__c &amp;&quot;&amp;p_LocationID=&quot;&amp; MDM_Location_Keys__c, &quot;VSPOne&quot;,&quot;_blank&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Profile Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_IOF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Account using IOF.</description>
        <inlineHelpText>VSP IOF claim submitted within the last 6 months.</inlineHelpText>
        <label>In Office Finishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optics_Key__c</fullName>
        <description>Account number with lab ID.</description>
        <inlineHelpText>Account number with lab ID(s).</inlineHelpText>
        <label>Optics Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Location_Spend_LTM__c</fullName>
        <inlineHelpText>Location&apos;s spend on Optics in the last 12 months</inlineHelpText>
        <label>Optics Location Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_Potential_Sales_Indicator__c</fullName>
        <label>Optics Potential Sales Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optics_Unity_Order_Count_LTM__c</fullName>
        <description>Number of Unity lens pair orders in the last twelve months. Includes VSP and private orders from VSP owned labs, VSP claims from non VSP owned labs and stock orders.</description>
        <inlineHelpText>Includes VSP and private orders from VSP-owned labs, VSP claims from non-VSP owned labs and stock orders.</inlineHelpText>
        <label>Premier UNITY Pair Count LTM</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optics_VSPOne_PM_Revenue__c</fullName>
        <description>Last month VSPOne Revenue.</description>
        <label>VSPOne Last Month Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_VSPOne_YTD_revenue__c</fullName>
        <description>VSPOne Revenue LTM.</description>
        <label>VSPOne Revenue LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_Wholesale__c</fullName>
        <label>Optics Business Development Manager</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Number__c</fullName>
        <description>Other Phone number on Account.</description>
        <inlineHelpText>Other Phone number on Account.</inlineHelpText>
        <label>Other Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSID__c</fullName>
        <description>Practice Solutions ID(s)</description>
        <inlineHelpText>Eyefinity Practice Solutions ID(s).</inlineHelpText>
        <label>Eyefinity Practice Solutions Key(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>